--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- MongoDB Java Driver (sync API) -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>5.2.0</version> <!-- или самая свежая -->
+		</dependency>
+
 		<!-- Jackson JSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
