feat(modules): создать необходимые модули
- создать модуль user
- создать модуль session
- создать модуль files
- создать модуль auth
- создать утилитарные классы
- переделать адаптер, api запрос и api ответ
- переделать loger config

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,9 @@ yarn-error.log*
 
 # Local overrides
 spendi.local.*
+
+# Хранилище файлов (локально)
+# Постоянные файлы (base dir)
+storage/
+# Временные загрузки
+uploads/
