--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,11 @@ Icon?
 
 # Env / secrets
 .env
+!.env.example
 .env.*
+!*.env.example
 *.env
+!*.env.example
 *.key
 *.pem
 *.crt
@@ -90,3 +93,5 @@ spendi.local.*
 storage/
 # Временные загрузки
 uploads/
+
+.runtime/
